сделал тестовый post myclass и multiplicationNumbers
